--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -9,7 +9,7 @@
     --vibrant-pink: #EF539E;          /* Active state color for nav link */
     --vibrant-pink: #ff4f40;          /* monzo*/
     --vibrant-pink: #9FE870;          /* wise*/
-    --vibrant-pink: #9c9c9c;          /* monzo*/
+    --vibrant-pink: #6b6b6b;          /* monzo*/
     --warm-beige: #F3E1D7;            /* Background color */
     /* Match root background to body to avoid black gutter */
     background-color: #212529;
@@ -123,7 +123,8 @@ h2, h5 {
     color: rgba(255, 255, 255, .55);
 }
 .nav-pills .nav-link:hover {
-    color: rgba(255, 255, 255, .85);
+    /* color: rgba(255, 255, 255, .85); */
+    background-color: var(--vibrant-pink);
 }
 
 /* Custom CSS to adjust spacing for the .logged-user-icon when navbar is collapsed (below 768px) */
