--- a/fetusapp/templates/patient_tabs/pregnancies.html
+++ b/fetusapp/templates/patient_tabs/pregnancies.html
@@ -1,42 +1,135 @@
 {% import 'macros.html' as macros %}
 
-{% if history_pregnancy_form.entries and history_pregnancy_form.entries[0].data.id %}
-<div class="row g-3" id="pregnancyHistoryEntries">
-    <div class="col-12 col-lg-2">
-        <ul class="nav nav-pills flex-column mb-3 p-2 secondary-nav-container bg-dark" id="pills-tab" role="tablist">
-            {% for entry_form in history_pregnancy_form.entries %}
-                {% set prefix = 'HistoryPregnancy_' ~ loop.index %}
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link {% if loop.first %}active{% endif %}"
-                        style="border-radius: 5rem;" 
-                        id="pills-appointments-{{ loop.index }}-tab" 
-                        data-tab-key="appointments" 
-                        data-bs-toggle="pill" 
-                        data-bs-target="#pills-appointments-{{ loop.index }}" 
-                        type="button" 
-                        role="tab" 
-                        aria-controls="pills-appointments-{{ loop.index }}" 
-                        aria-selected="false">
-                        {{ entry_form.form.ter.data }}
-                    </button>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
-    <div class="col-12 col-lg-10" style="background-color: tomato;">
-        <div class="tab-content p-3" id="pills-tabContent">
-            {% for entry_form in history_pregnancy_form.entries %}
-                {% set prefix = 'HistoryPregnancy_' ~ loop.index %}
-                <div class="tab-pane fade {% if loop.first %}show active{% endif %}" 
-                    id="pills-appointments-{{ loop.index }}" 
-                    role="tabpanel" 
-                    aria-labelledby="pills-appointments-{{ loop.index }}-tab" 
-                    tabindex="0">
-                    {{ entry_form.form.ter.data }}
+
+<div class="col-12">
+    <div class="card card-cover inherit-text-color bg-transparent rounded-4 shadow-lg">
+        <div class="d-flex flex-column h-100 text-shadow-1">
+            {% if history_pregnancy_form.entries and history_pregnancy_form.entries[0].data.id %}
+            <div class="container px-0 ">
+                <div class="row g-3" id="pregnancyHistoryEntries">
+                    <div class="col-12 col-lg-2">
+                        <ul class="nav nav-pills flex-column mb-3 p-2 secondary-nav-container bg-dark" id="pills-tab" role="tablist">
+                            {% for entry_form in history_pregnancy_form.entries %}
+                                {% set prefix = 'HistoryPregnancy_' ~ loop.index %}
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link {% if loop.first %}active{% endif %}"
+                                        style="border-radius: 5rem;"
+                                        id="pills-appointments-{{ loop.index }}-tab"
+                                        data-tab-key="appointments"
+                                        data-bs-toggle="pill"
+                                        data-bs-target="#pills-appointments-{{ loop.index }}"
+                                        type="button"
+                                        role="tab"
+                                        aria-controls="pills-appointments-{{ loop.index }}"
+                                        aria-selected="false">
+                                        {{ entry_form.form.ter.data }}
+                                    </button>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <div class="col-12 col-lg-10" style="background-color: tomato;">
+                        <div class="tab-content p-3" id="pills-tabContent">
+                            {% for entry_form in history_pregnancy_form.entries %}
+                                {% set prefix = 'HistoryPregnancy_' ~ loop.index %}
+                                <div class="tab-pane fade {% if loop.first %}show active{% endif %}"
+                                    id="pills-appointments-{{ loop.index }}"
+                                    role="tabpanel"
+                                    aria-labelledby="pills-appointments-{{ loop.index }}-tab"
+                                    tabindex="0">
+                                    {{ entry_form.form.ter.data }}
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    {% for entry_form in history_pregnancy_form.entries %}
+                        {% set prefix = 'HistoryPregnancy_' ~ loop.index %}
+                    <div class="col-12 col-lg-6 obstetrics-history-entry" id="entryWrapper{{ prefix }}">
+                        <div class="card card-cover inherit-text-color bg-transparent rounded-4 shadow-lg" id="card{{ prefix }}">
+                            <div class="d-flex flex-column h-100 text-shadow-1">
+                                <div class="container px-0 ">
+                                    <div class="form-container" style="position: relative; transition: max-height 0.2s ease-in-out;" id="formContainer{{ prefix }}">
+                                        <input type="hidden" name="id" value="{{ entry_form.form.id.data }}" style="display: none;">
+                                        <!-- Read Only View -->
+                                        <div class="read-only read-only-labels p-4" id="readOnlyContent{{ prefix }}">
+                                            <div class="row py-2">
+                                                <div class="col-12">
+                                                    <div class="text-center">
+                                                        <div class="fs-1 fw-semibold">{{ entry_form.form.ter.data }}</div>
+                                                    </div>
+                                                    {% set form_elements = ['ter'] %}
+                                                    {% for element in form_elements %}
+                                                        {% set field = getattr(entry_form, element) %}
+                                                        {{ macros.render_field(field.label, field.data, field.type) }}
+                                                    {% endfor %}
+                                                </div>
+                                            </div>
+                                            <div class="d-flex flex-wrap justify-content-end gap-2 mt-3">
+                                                <form action="">
+                                                    <input type="hidden" name="id" value="{{ entry_form.form.id.data }}">
+                                                    <button type="button" class="btn btn-outline-secondary px-4" data-edit-button="true" onclick="toggleEditMode('{{ prefix }}')">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-pencil-square" viewBox="1 0 16 16"><path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/><path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/></svg>
+                                                        Επεξεργασία
+                                                    </button>
+                                                    <button type="button" class="btn btn-outline-danger px-4" onclick="showDeleteObstetricsHistoryXModal(this)">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-trash3" viewBox="1 0 16 16"><path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/></svg>
+                                                    </button>
+                                                </form>
+
+                                            </div>
+                                        </div>
+                                        <!-- Editable View -->
+                                        <div class="editable card card-cover rounded-4 shadow-lg" id="editableContent{{ prefix }}" style="display: none;">
+                                            <div class="d-flex flex-column p-3 text-shadow-1">
+                                                <div class="wrapper">
+                                                    <div class="form-wrapper patient-lite px-2">
+                                                        <form method="POST" id="obstetricsHistoryForm{{ prefix }}" data-history-id="{{ obstetrics_history_form.id.data if obstetrics_history_form else '' }}">
+                                                            {{ history_pregnancy_form.hidden_tag() }}
+                                                            <input type="hidden" name="id" value="{{ entry_form.form.id.data }}">
+                                                            <!-- {{ entry_form.form.id.data }} -->
+                                                            <div class="col-12">
+                                                                <div class="row py-2">
+                                                                    <div class="col-12">
+                                                                    {% set form_elements = ['ter'] %}
+                                                                    {% for element in form_elements %}
+                                                                        {% set field = getattr(entry_form, element) %}
+                                                                        {% if field.type != 'HiddenField' %}
+                                                                            {{ macros.input_group(element, {'type': field.type, 'label': field.label.text}, field.data) }}
+                                                                        {% endif %}
+                                                                    {% endfor %}
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
+                                                                <button type="button" class="btn login-btn px-4" onclick="saveChangesHistoryObstetricsX(this)">
+                                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-floppy" viewBox="0 1 16 16">
+                                                                        <path d="M11 2H9v3h2z"/>
+                                                                        <path d="M1.5 0h11.586a1.5 1.5 0 0 1 1.06.44l1.415 1.414A1.5 1.5 0 0 1 16 2.914V14.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 14.5v-13A1.5 1.5 0 0 1 1.5 0M1 1.5v13a.5.5 0 0 0 .5.5H2v-4.5A1.5 1.5 0 0 1 3.5 9h9a1.5 1.5 0 0 1 1.5 1.5V15h.5a.5.5 0 0 0 .5-.5V2.914a.5.5 0 0 0-.146-.353l-1.415-1.415A.5.5 0 0 0 13.086 1H13v4.5A1.5 1.5 0 0 1 11.5 7h-7A1.5 1.5 0 0 1 3 5.5V1H1.5a.5.5 0 0 0-.5.5m3 4a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5V1H4zM3 15h10v-4.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5z"/>
+                                                                    </svg>
+                                                                    Αποθήκευση
+                                                                </button>
+                                                                <button type="button" class="btn btn-outline-secondary px-4" onclick="cancelChanges()">
+                                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-x-square" viewBox="0 1 16 16">
+                                                                        <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                                                                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                                                                    </svg>
+                                                                    Ακύρωση
+                                                                </button>
+                                                            </div>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
                 </div>
-            {% endfor %}
+            </div>
+            {% endif %}
         </div>
     </div>
-    
 </div>
-{% endif %}
