--- a/fetusapp/templates/macros.html
+++ b/fetusapp/templates/macros.html
@@ -34,6 +34,12 @@
         {% elif field_config.type == 'TextAreaField' %}
             <label class="textarea-top-label" for="{{ field_name }}Input">{{ field_config.label }}</label>
             <textarea id="{{ field_name }}Input" name="{{ field_name }}" class="form-control expanding-textarea" rows="3">{% if value is not none %}{{ value }}{% endif %}</textarea>
+        {% elif field_config.type == 'DateField' %}
+            <input type="date"
+                id="{{ field_name }}Input"
+                name="{{ field_name }}"
+                {% if value is not none and value != '' %}value="{{ value }}"{% endif %} required>
+            <label for="{{ field_name }}Input">{{ field_config.label }}</label>
         {% else %}
             <input type="{{ field_config.type }}"
                 id="{{ field_name }}Input"
