previous next buttons

--- a/fetusapp/templates/index.html
+++ b/fetusapp/templates/index.html
@@ -37,7 +37,7 @@ block content %}
 
           <div class='calendar-container pb-3'>
             <div id="calendar-controls" class="text-end">
-              <button onclick="changeDate(-1)" type="button" class="btn btn-outline-secondary me-1">
+              <button onclick="changeDate(-1)" type="button" class="btn btn-outline-secondary me-1 px-4">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223"></path>
                 </svg>
@@ -45,7 +45,7 @@ block content %}
               </button>
               <input type="date" id="date-picker" class="form-control d-inline-block w-auto" onchange="changeDateToSelected()">
               <p id="current-date" class="visually-hidden">{{ current_date.strftime('%Y-%m-%d') }}</p>
-              <button onclick="changeDate(1)" type="button" class="btn btn-outline-secondary ms-1">
+              <button onclick="changeDate(1)" type="button" class="btn btn-outline-secondary ms-1 px-4">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-right" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671"></path>
                 </svg>
