--- a/fetusapp/templates/patient_tabs/pregnancies.html
+++ b/fetusapp/templates/patient_tabs/pregnancies.html
@@ -51,6 +51,54 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-12 col-lg-10" style="display: none;">
+                        <div class="tab-content p-3" id="pregnancies-new-tabContent">
+                           <div class="editable card card-cover rounded-4 shadow-lg" id="editableContent_New" style="display: none;">
+                                <div class="d-flex flex-column p-3 text-shadow-1">
+                                    <div class="wrapper">
+                                        <div class="form-wrapper patient-lite px-2">
+                                            <form method="POST" id="pregnancyHistoryForm_New">
+                                                {{ history_pregnancy_form.hidden_tag() }}
+                                                <input type="hidden" name="id" value="">
+                                                <div class="col-12">
+                                                    <div class="row py-2">
+                                                        <div class="compact-form">
+                                                                <div class="row gx-3 gy-0">
+                                                                    {% set entry_form = history_pregnancy_form.entries[0] %}
+                                                                    {% set new_fields = ['ter'] %}
+                                                                    {% for element in new_fields %}
+                                                                        {% set field = getattr(entry_form, element) %}
+                                                                        {% if field.type != 'HiddenField' %}
+                                                                            {{ macros.input_group(element, {'type': field.type, 'label': field.label.text}, field.data) }}
+                                                                        {% endif %}
+                                                                    {% endfor %}
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="d-flex flex-wrap justify-content-center gap-2 mt-3">
+                                                    <button type="button" class="btn login-btn px-4" onclick="saveChangesPregnancy(this)">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-floppy" viewBox="0 1 16 16">
+                                                            <path d="M11 2H9v3h2z"/>
+                                                            <path d="M1.5 0h11.586a1.5 1.5 0 0 1 1.06.44l1.415 1.414A1.5 1.5 0 0 1 16 2.914V14.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 14.5v-13A1.5 1.5 0 0 1 1.5 0M1 1.5v13a.5.5 0 0 0 .5.5H2v-4.5A1.5 1.5 0 0 1 3.5 9h9a1.5 1.5 0 0 1 1.5 1.5V15h.5a.5.5 0 0 0 .5-.5V2.914a.5.5 0 0 0-.146-.353l-1.415-1.415A.5.5 0 0 0 13.086 1H13v4.5A1.5 1.5 0 0 1 11.5 7h-7A1.5 1.5 0 0 1 3 5.5V1H1.5a.5.5 0 0 0-.5.5m3 4a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5V1H4zM3 15h10v-4.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5z"/>
+                                                        </svg>
+                                                        Αποθήκευση
+                                                    </button>
+                                                    <button type="button" class="btn btn-outline-secondary px-4" onclick="cancelPregnancyEdit()">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-x-square" viewBox="0 1 16 16">
+                                                            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                                                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                                                        </svg>
+                                                        Ακύρωση
+                                                    </button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-12 col-lg-10">
                         <div class="tab-content p-3" id="pregnancies-inner-tabContent">
                             {% for entry_form in history_pregnancy_form.entries %}
